# trilium-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/trilium_mcp/: __init__.py  main.py  models.py
tests/: test_lifespan.py  test_models.py  test_tool_logic.py  test_tools.py
