[project]
name = "trilium-mcp"
version = "0.1.0"
description = "Trilium Notes ETAPI as MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "trilium-py>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trilium_mcp"]

[project.scripts]
trilium-mcp = "trilium_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
